[project]
name = "DiffusionBlocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "lightning==2.5.0",
    "wandb==0.18.6",
    "transformers==4.52.4",
    "datasets==3.5.0",
    "huggingface-hub[hf-xet]>=0.31.2",
    "hf-transfer>=0.1.9",
    "scipy>=1.16.2",
    "flash-attn==2.7.4.post1",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'"}
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'"}
]
